# fm

./: Cargo.toml  LICENSE  PKGBUILD  README.md  bootstrap  flake.nix
.github/workflows/: ci.yml
src/: alert.rs  config.rs  directory_list.rs  file_preview.rs  filesystem.rs  lib.rs  logging.rs  main.rs  mount.rs  new_folder_dialog.rs  ops.rs  places_sidebar.rs  progress.rs  styles.css  transfer_progress.rs  util.rs  widgets.rs
src/component/: alert.rs  app.rs  directory_list.rs  file_preview.rs  mod.rs  mount.rs  new_folder_dialog.rs  places_sidebar.rs  transfer_progress.rs
src/component/file_preview/: pdf.rs
src/component/places_sidebar/: place.rs
src/directory_list/: actions.rs
src/file_preview/: modeline.rs
src/places_sidebar/: place.rs
src/util/: emblemed_paintable.rs
src/widgets/: directory_list.rs  file_panes.rs  file_preview.rs
