[package]
name = "fm"
version = "0.1.0"
edition = "2021"
authors = ["Andy Russell <arussell123@gmail.com>"]
publish = false
license = "MIT"

[dependencies]
anyhow = "1.0.51"
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
directories = "4.0.1"
educe = { version = "0.4.19", features = ["Debug"], default-features = false }
env_logger = "0.9.0"
log = "0.4.14"
mime = "0.3.16"
once_cell = "1.9.0"
pathdiff = "0.2.1"
relm4 = { git = "https://github.com/Relm4/Relm4", tag = "v0.5.0-beta.3", features = ["libadwaita", "libpanel", "macros"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sourceview5 = { git = "https://gitlab.gnome.org/World/Rust/sourceview5-rs.git" }
