[package]
name = "fm"
version = "0.1.0"
edition = "2021"
authors = ["Andy Russell <arussell123@gmail.com>"]
publish = false
license = "MIT"
repository = "https://github.com/euclio/fm"
homepage = "https://github.com/euclio/fm"
description = "A small, general-purpose file manager."

[dependencies]
anyhow = "1.0.51"
clap = { version = "4.3.21", features = ["derive"] }
directories = "4.0.1"
educe = { version = "0.4.19", features = ["Debug"], default-features = false }
futures = { version = "0.3.25", default-features = false }
itertools = "0.10.5"
mime = "0.3.16"
once_cell = "1.9.0"
pathdiff = "0.2.1"
poppler-rs = { version = "0.24.1" }
relm4 = { version = "0.9.0", features = ["libadwaita", "libpanel", "gnome_43"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sourceview5 = "0.9.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.4"
